@@ -1,3 +1,11 @@
+2023-11-22  Niels Möller  <nisse@lysator.liu.se>
+
+	* tune/speed.h (SPEED_ROUTINE_MPN_MUL_TSPACE): Rename macro, was
+	SPEED_ROUTINE_MPN_MUL_N_TSPACE. Update all users.
+	(SPEED_ROUTINE_MPN_TOOM22_MUL, SPEED_ROUTINE_MPN_TOOM33_MUL)
+	(SPEED_ROUTINE_MPN_TOOM44_MUL, SPEED_ROUTINE_MPN_TOOM6H_MUL)
+	(SPEED_ROUTINE_MPN_TOOM8H_MUL): Analogous renames, were _MUL_N.
+
 2023-11-20  Niels Möller  <nisse@lysator.liu.se>
 
 	* tune/speed.h (struct speed_params): Add size_ratio field.
